Update Gerente.java
Agora funciona para versões desatualizadas do JDK